[package]
name = "legit"
version = "0.0.0"
authors = ["Joel Söderman <joel.soderman@klarna.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.16"
serde = "1"
anyhow = "1"
walkdir = "2"
flate2 = "1"
chrono = "0.4"

[package.metadata.scripts]
run = "bin/run"
goodbye = "echo Goodbye"
